# Rugby-Data

./: .gitignore  AUTOMATION.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  pyproject.toml  requirements.txt  update_data.py
dashboard/: EMBED_GUIDE.md  example.html  index.html
data/: player_rankings.json
json/: Aviva Premiership-2017-2018.json  Aviva Premiership-2018-2019.json  European Rugby Challenge Cup-2017-2018.json  European Rugby Champions Cup-2017-2018.json  Gallagher Premiership-2018-2019.json  Guinness Pro14-2017-2018.json  Top 14-2011-2010.json  Top 14-2012-2011.json  Top 14-2013-2014.json  Top 14-2015-2016.json  Top 14-2017-2018.json  Top 14-2018-2019.json  celtic-2002-2003.json  celtic-2003-2004.json  celtic-2004-2005.json  celtic-2005-2006.json  celtic-2006-2007.json  celtic-2007-2008.json  celtic-2008-2009.json  celtic-2009-2010.json  celtic-2010-2011.json  celtic-2011-2012.json  celtic-2012-2013.json  celtic-2013-2014.json  celtic-2014-2015.json  celtic-2015-2016.json  celtic-2016-2017.json  celtic-2017-2018.json  celtic-2018-2019.json  celtic-2019-2020.json  celtic-2020-2021.json  celtic-2021-2022.json  celtic-2022-2023.json  celtic-2023-2024.json  celtic-2024-2025.json  celtic-2025-2026.json  celticPro-14-2018-2019.json  championship-2019-2020.json  championship-2020-2021.json  championship-2021-2022.json  (+137 more)
notebooks/: Internationals.ipynb  Player analysis.ipynb  PyMC Player Analysis.ipynb  Sky Sports Download.ipynb
rugby/: __init__.py  cli.py  config.py  data.py  data_loader.py  match.py  models.py  scrape.py  tournament.py  update.py
(+699 files in other folders)
