[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rugby-data"
version = "0.2.0"
description = "Rugby union data acquisition, storage, and analysis tools"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "beautifulsoup4>=4.9.3",
    "requests>=2.25.1",
    "click>=8.0.0",
    "dateparser>=1.0.0",
    "pyyaml>=5.4.0",
    "lxml>=4.6.0",
    "cycler>=0.10.0",
    "tomli>=1.1.0;python_version<'3.11'",
]

[project.optional-dependencies]
analysis = [
    "rugby-ranking",
    "arviz",
]

[project.scripts]
rugby = "rugby.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["rugby"]
